
name:                BoundDependentLC
version:             0.1.0.0
synopsis:            Calculus of Constructions with Bound.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Andr치s Kov치cs
maintainer:          puttamalac@gmail.com
copyright:           Andr치s Kov치cs 2016
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     BoundDependentLC
  other-extensions:    LambdaCase, DeriveFunctor
  build-depends:       base >=4.8 && <4.9, prelude-extras >=0.4 && <0.5, bound >= 1.0.7 && < 1.1
  default-language:    Haskell2010